Code cleanup in DelegatingByTypeSerializer
* Use method args delegates uniformly instead of this.delegates